<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RegisterActivity"
    tools:showIn="@layout/activity_register"
    android:background="@drawable/bg_login">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <EditText
        android:id="@+id/edt_taikhoan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="98dp"
        android:background="@drawable/et_bg"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details"

        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/img_userPhoto" />

    <EditText
        android:id="@+id/edt_matkhau"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_bg"
        android:drawableEnd="@drawable/ic_eye"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/edt_taikhoan" />

    <EditText
        android:id="@+id/edt_nhaplaimaikhau"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_bg"
        android:drawableEnd="@drawable/ic_eye"
        android:hint="@string/passwordagain"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/edt_matkhau" />

    <Button
        android:id="@+id/btn_dangki"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_bg"
        android:text="Đăng kí"
        android:textAllCaps="false"
        android:textColor="@color/login_form_details_medium"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/edt_nhaplaimaikhau" />

    <ImageView
        android:id="@+id/img_userPhoto"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/userphoto"
        app:layout_constraintBottom_toTopOf="@+id/edt_taikhoan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar_Register"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/edt_nhaplaimaikhau" />


</androidx.constraintlayout.widget.ConstraintLayout>